--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -119,7 +119,7 @@
                                     		HorizontalGridLinesBrush="#FF575757" 
                                     		VerticalGridLinesBrush="Gray"
                                     		Height="545"  
-                                                   SelectedIndex="-1" SelectionChanged="dgPackageInfo_SelectionChanged" Canvas.Left="10" GridLinesVisibility="None"
+                                                   SelectedIndex="-1" SelectionChanged="dgPackageInfo_SelectionChanged" Canvas.Left="10"
                                                    >
 
                                             <DataGrid.Resources>
@@ -393,7 +393,7 @@
                                                    MouseLeftButtonDown="imgZoom_MouseLeftButtonDown"/>
                                         </Border>
 
-                                        <Canvas x:Name="cvItemStatus" Visibility="Visible" Height="500" Canvas.Left="430" Canvas.Top="45" Width="950" OpacityMask="#FF535252" Background="#FF406B83">
+                                        <Canvas x:Name="cvItemStatus" Visibility="Hidden" Height="500" Canvas.Left="430" Canvas.Top="45" Width="950" OpacityMask="#FF535252" Background="#FF406B83">
                                             <Canvas.Style>
                                                 <Style TargetType="Canvas">
                                                     <Style.Triggers>
@@ -432,7 +432,7 @@
                                                               CanUserAddRows="False"
                                                               HeadersVisibility="None"
                                                               HorizontalGridLinesBrush="{x:Null}" VerticalGridLinesBrush="{x:Null}" 
-                                                              Loaded="dgReasons_Loaded" Background="#FFB8B8B8" Width="947" >
+                                                              Loaded="dgReasons_Loaded" Background="#FFB8B8B8" Width="947" GridLinesVisibility="None" >
                                                 <DataGrid.Columns >
                                                             <DataGridTemplateColumn Header="" Width="50">
                                                                 <DataGridTemplateColumn.CellTemplate>
